hphp/test/zend/bad/ext/spl/tests/array_027.php
<?php
class AO extends ArrayObject {
}
$o = new AO();
$o['plop'] = $o;

var_dump($o);